--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.2.1",
     "@mui/material": "^5.3.0",
     "@syncfusion/ej2-react-splitbuttons": "^19.4.40",
+    "axios": "^0.25.0",
     "canvas-table": "^0.0.8",
     "file-saver": "^2.0.5",
     "material-ui-slider": "^3.0.8",
@@ -31,6 +32,7 @@
     "react-table": "^7.7.0",
     "react-table-6": "^6.11.0",
     "react-table-scrollbar": "^0.1.11",
+    "react-toastify": "^8.1.0",
     "recharts": "^2.1.8",
     "styled-components": "^4.3.2"
   },
