--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "PORT=10001 react-app-rewired start",
+    "build": "PORT=10001 react-app-rewired build",
+    "test": "PORT=10001 react-app-rewired test",
+    "eject": "PORT=10001 react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
